<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">ActivCam</string>

    <string name="settings">Settings</string>
    <string name="license">License</string>
    <string name="motion" translatable="false">Motion</string>

    <string name="url_help_notify" translatable="false">https://www.activcam.de/index.html#notifications-beta</string>

    <string name="more_cams">More cameras</string>
    <string name="one_cam">Single camera</string>

    <string name="webcontrol_port" translatable="false">Webcontrol port number</string>
    <string name="webcontrol_auth" translatable="false">Webcontrol authentication</string>
    <string name="video_auth" translatable="false">Videostream authentication</string>
    <string name="config" translatable="false"><u>Show Config</u></string>

    <string name="start_detection">Start detection?</string>

    <string name="text_license" translatable="false">

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.

    </string>

    <string name="notify" translatable="false">Notify</string>
    <string name="text_consent" translatable="false">
        I hereby consent to the registration for push notifications using Firebase Cloud Messaging.
        I have taken note of the opportunity to view the data protection declaration of Google.
        I can revoke my consent at any time. The messaging id of this installation will be:
    </string>
    <string name="text_revoke" translatable="false">
        This device is registered for push notifications using Firebase Cloud Messaging.
        If you revoke your consent, the basic function of the app remains unaffected.
        The messaging id of this installation is:
    </string>
    <string name="push_notifications" translatable="false">Notifications (BETA)</string>
    <string name="text_consent_agree" translatable="false">Yes I agree</string>
    <string name="text_consent_revoke" translatable="false">I revoke</string>
    <string name="text_consent_cancel" translatable="false">Cancel</string>
    <string name="text_consent_help" translatable="false">Help</string>

    <string name="event_end" translatable="false">\"eventend\" submitted</string>
    <string name="hide_eventend" translatable="false">Hide \"eventend\"</string>
    <string name="stop_detection" translatable="false">\"pause\" submitted</string>
    <string name="make_movie" translatable="false">\"eventstart-makemovie\" submitted</string>
    <string name="hide_eventstart" translatable="false">Hide \"eventstart\"</string>
    <string name="do_you_trust">Do you trust this certificate?"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>