<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:gravity="top|center"
        android:orientation="vertical"
        android:weightSum="1">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/editTextMotionUrlDynDNS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:ems="10"
            android:focusable="true"
            android:gravity="center_vertical|center_horizontal"
            android:hint="https://dyndns-hostname"
            android:inputType="textVisiblePassword"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textViewMotionUrlDynDNS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Server URL"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dp" />


        <EditText
            android:id="@+id/editTextControlPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:ems="10"
            android:focusable="true"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:hint="8080" />

        <TextView
            android:id="@+id/textViewControlPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/webcontrol_port"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/editTextAuthWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:ems="10"
            android:focusable="true"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="textPassword"
            android:hint="admin:1234"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textViewWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/webcontrol_auth"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/editTextAuthVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:ems="10"
            android:focusable="true"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="textPassword"
            android:hint="admin:1234"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textViewAuthVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/video_auth"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextVideo1Port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:ems="10"
            android:focusable="true"
            android:gravity="center_vertical|center_horizontal"
            android:hint="8081/0/stream"
            android:inputType="textVisiblePassword"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textViewVideo1Port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Cam:1 port/uri"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextVideo3Port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.1"
                android:ems="10"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:hint="8081/3/stream"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewVideo3Port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Cam:3 port/uri"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12dp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextVideo2Port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:ems="10"
            android:focusable="true"
            android:gravity="center_vertical|center_horizontal"
            android:hint="8081/2/stream"
            android:inputType="textVisiblePassword"
            android:maxLines="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewVideo2Port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Cam:2 port/uri"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dp"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextVideo4Port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:ems="10"
            android:focusable="true"
            android:gravity="center_vertical|center_horizontal"
            android:hint="8081/4/stream"
            android:inputType="textVisiblePassword"
            android:maxLines="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewVideo4Port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Cam:4 port/uri"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dp"
            android:visibility="gone" />

    </LinearLayout>



    </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switchHideEventButtonStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/hide_eventstart"
                    android:checked="true" />

                <Switch
                    android:id="@+id/switchHideEventButtonEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/hide_eventend"
                    android:checked="true"/>

            </LinearLayout>


        <Button
            android:id="@+id/buttonMoreCams"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

<!--            <ImageButton-->
<!--                android:id="@+id/buttonMoreCams"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical|center_horizontal"-->
<!--                android:layout_margin="16dp"-->
<!--                android:background="@android:color/transparent"-->
<!--                android:src="@android:drawable/ic_menu_camera"-->
<!--                android:visibility="visible" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextMotionUrlHomeWifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.4"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="http://192.168.1.1"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/textViewMotionUrlHomeWifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.4"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Alternative Wifi-URL"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextSSID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.6"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="MyWifi"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/textViewSSID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.6"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="SSID"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>