<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|top"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/camerapanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:gravity="top|center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/camera_row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <WebView
                android:id="@+id/webView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:visibility="visible" />

            <WebView
                android:id="@+id/webView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/camera_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <WebView
                android:id="@+id/webView21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:visibility="visible" />

            <WebView
                android:id="@+id/webView22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:clickable="true"
                android:contextClickable="true"
                android:longClickable="true"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/motionpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="2sp"
        android:layout_weight="0"
        android:gravity="top|center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/videoStatus"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:lines="1"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="@color/dkgray"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:gravity="top|center"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:src="@android:drawable/ic_media_play"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/buttonEventStart"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:src="@android:drawable/presence_video_online"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/buttonSnapshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:src="@drawable/ic_menu_camera"
                android:visibility="visible" />


            <ImageButton
                android:id="@+id/buttonEventEnd"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:src="@android:drawable/presence_offline"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/buttonPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:src="@android:drawable/ic_media_pause"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/buttonCAM0"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="0"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonCAM1"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="1"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonCAM2"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="2"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonCAM3"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="3"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonCAM4"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="4"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layoutCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtAktCamera"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:text="CAM:0"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic"
                android:visibility="visible" />

            <TextView
                android:id="@+id/cameraTime"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/cameraConfig"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/config"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/license"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="3dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_menu_manage"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtMotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/notify"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>



